change Dockerfile header comment

--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -1,4 +1,4 @@
-# Temporary placeholder Dockerfile
+# ~/mfp/sites/lonestarstatuary/react-app/Dockerfile
 FROM nginx:alpine
 # Just serve a simple "coming soon" page
 RUN echo "<h1>Lone Star Statuary - Coming Soon</h1>" > /usr/share/nginx/html/index.html
