--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "watch-ts": "tsc -w"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/multer": "^1.4.12",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
