--- a/react-app/public/manifest.json
+++ b/react-app/public/manifest.json
@@ -4,9 +4,9 @@
   "description": "Handcrafted Classical Sculptures & Custom Commissions",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon",
+      "src": "favicon.png",
+      "sizes": "124x124",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
