--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.12",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
