--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,14 @@
     "setup": "ts-node src/scripts/setup-dev.ts"
   },
   "dependencies": {
+    "@lonestar/shared": "file:../shared",
     "@types/multer": "^1.4.12",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
-    "multer": "^1.4.5-lts.1",
-    "@lonestar/shared": "file:../shared"
+    "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
