--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@lonestar/shared": "file:../shared",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,14 +13,14 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@lonestar/shared": "file:../shared"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
